src/test/deca/context/invalid/created/objet/null2.deca
// Description :
// test classe null affectation
//
// Resultats :
//      Ligne 21 : Ne sont pas de même type

class A {
     int x;

}
class B {

}


{
    A a = new A ();
    B b = new B ();
    a = null;
    b = null;
    b = a;
      
}